Add multiple improvements

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,7 @@ bind-key k select-pane -U
 bind-key j select-pane -D
 
 set-option -g status-position top
+set-window-option -g xterm-keys on
 
 # TPM Config
 # List of plugins
