--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -15,3 +15,8 @@ history = 10_000
 
 [selection]
 save_to_clipboard = true
+
+[[keyboard.bindings]]
+key = "Tab"
+mods = "Shift"
+chars = "\u001b[Z"
